--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,15 @@ services:
     volumes:
       - redisdata:/data
 
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+      - redis
+
 volumes:
   redisdata:
